tests/machine/x/rust/min_max_builtin.error
line 0: compile: exit status 1
error[E0425]: cannot find function `min` in this scope
 --> /workspace/mochi/tests/machine/x/rust/min_max_builtin.rs:3:22
  |
3 |     println!("{:?}", min(nums));
  |                      ^^^ not found in this scope
  |
help: consider importing this function
  |
1 + use std::cmp::min;
  |

error[E0425]: cannot find function `max` in this scope
 --> /workspace/mochi/tests/machine/x/rust/min_max_builtin.rs:4:22
  |
4 |     println!("{:?}", max(nums));
  |                      ^^^ not found in this scope
  |
help: consider importing this function
  |
1 + use std::cmp::max;
  |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

fn main() {
