tests/machine/x/rust/min_max_builtin.rs
fn main() {
    let nums = vec![3, 1, 4];
    println!("{:?}", min(nums));
    println!("{:?}", max(nums));
}
